# UCI

./: Cargo.toml
src/: interface.rs  lib.rs
src/engine/: authentication.rs  info.rs  mod.rs  option.rs
src/gui/: go.rs  mod.rs
src/interface/: parsing.rs
