[package]
name = "uci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["tracing"] }
tracing = { version = "0.1.40", features = ["log", "async-await"] }
