[package]
name = "uci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde"]


[dependencies]
serde = { version = "1.0.193", features = ["derive"], optional = true}
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["tracing"] }
tracing = { version = "0.1.40", features = ["log", "async-await"] }
